--- a/pom.xml
+++ b/pom.xml
@@ -324,6 +324,18 @@
 			<timezone>2</timezone>
 			<properties />
 		</developer>
+		<developer>
+			<id>jorge19rio</id>
+			<name>Jorge Riopedre Vega </name>
+			<email>uo239302@uniovi.es</email>
+			<organization>University of Oviedo</organization>
+			<organizationUrl>http://www.uniovi.es</organizationUrl>
+			<roles>
+				<role>Developer</role>
+			</roles>
+			<timezone>2</timezone>
+			<properties />
+		</developer>
 	</developers>
 
 
