--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 	<dependencies>
 
 		<!--Logging -->
-		<dependency>
+<!--	<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
@@ -41,7 +41,8 @@
 			<artifactId>commons-cli</artifactId>
 			<version>1.3</version>
 		</dependency>
-		
+-->
+	
 <dependency>
   <groupId>org.assertj</groupId>
   <artifactId>assertj-core</artifactId>
@@ -101,6 +102,11 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<!--Build plugins -->
 	<build>
@@ -316,6 +322,18 @@
 			<id>nacho1014</id>
 			<name>Ignacio Fernandez Alvarez </name>
 			<email>uo237124@uniovi.es</email>
+			<organization>University of Oviedo</organization>
+			<organizationUrl>http://www.uniovi.es</organizationUrl>
+			<roles>
+				<role>Developer</role>
+			</roles>
+			<timezone>2</timezone>
+			<properties />
+		</developer>
+		<developer>
+			<id>Nauce</id>
+			<name>Naucé López González</name>
+			<email>uo240371@uniovi.es</email>
 			<organization>University of Oviedo</organization>
 			<organizationUrl>http://www.uniovi.es</organizationUrl>
 			<roles>
