--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 # spring.h2.console.enabled=true
 logging.level.org.hibernate.SQL=debug
 
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
