--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,8 @@ services:
   - mysql
 before_install:
 - mysql -e "create database IF NOT EXISTS test;" -uroot
+ - pip install codecov
 notifications:
   slack: veigadevteam:2ZWGQ2aH21BZOdjj9dNm2nlX
+after_success:
+  - codecov
